--- a/src/app/dog-card/dog-card.component.html
+++ b/src/app/dog-card/dog-card.component.html
@@ -1,9 +1,12 @@
-<p>dog-card works!</p>
-<ul>
-  <li *ngFor="let dog of dogs$ | async">
-    {{ dog.index }}
-    <br>
-    {{ dog.message }}
-  </li>
-</ul>
-<button (click)="changeDog()">Change a dog</button>
+<main>
+  <h1>Dogs that tell you Chuck Norris jokes</h1>
+  <p>Click on a dog to hear its joke.</p>
+  <ul class="dog-picture-container">
+    <li *ngFor="let dog of dogs$ | async">
+      <img 
+        class="dog-picture" 
+        [src]="dog.message" [alt]="dog.breed"
+        (click)="changeDog(dog.index)">
+    </li>
+  </ul>
+</main>
