--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap')
+
+* 
+  margin: 0
+  padding: 0
+  box-sizing: border-box
+
+:root 
+  --thistle-color: #d3c4e3
+  --pink-color: #dbb1bc
+  --bluebell-color: #8f95d3
+  --babyblue-color: #89daff
+  --umber-color: #58504a
+  --default-font-family: Poppins,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif
+
+body
+  font-family: var(--default-font-family)
