feat: add modal compnent for dogs

--- a/src/app/dog-card/dog-card.component.html
+++ b/src/app/dog-card/dog-card.component.html
@@ -6,7 +6,7 @@
       <img 
         class="dog-picture" 
         [src]="dog.message" [alt]="dog.breed"
-        (click)="changeDog(dog.index)">
+        (click)="openDog(dog.index)">
     </li>
   </ul>
 </main>
