--- a/src/styles.sass
+++ b/src/styles.sass
@@ -17,3 +17,12 @@
 
 body
   font-family: var(--default-font-family)
+
+button
+  background-color: var(--thistle-color)
+  padding: 1.25rem 1.75rem
+  font-size: 1.25rem
+  font-weight: bold
+  border: 0.175rem solid var(--umber-color)
+  border-radius: 0.25rem
+  
