feat: add Good Girl button

--- a/src/app/modal/modal.component.sass
+++ b/src/app/modal/modal.component.sass
@@ -47,3 +47,13 @@
         max-height: 20vh
         overflow: auto
         font-size: 0.875rem
+
+    .modal__button-wrapper
+      width: 100%
+      display: flex
+      justify-content: space-between
+
+      .boy
+        background-color: var(--bluebell-color)
+      .girl
+        background-color: var(--pink-color)
