--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -7,6 +7,9 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Error adipisci libero inventore illum cumque assumenda nostrum vel, placeat veniam dolore dolores aut asperiores odio porro officia id eaque totam, perferendis ducimus magni. Fugiat possimus dolores sapiente quasi. In hic, beatae, modi nesciunt dignissimos, earum quibusdam dicta eveniet velit porro aperiam.
       </p>
     </div>
-    <button type="button" class="button modal__button" (click)="closeModal()">Good Boy!</button>
+    <div class="modal__button-wrapper">
+      <button type="button" class="button modal__button boy" (click)="closeModal()">Good Boy!</button>
+      <button type="button" class="button modal__button girl" (click)="closeModal()">Good Girl!</button>
+    </div>
   </div>
 </div>
