--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap')
 
 * 
   margin: 0
@@ -14,15 +15,20 @@
   --babyblue-color: #89daff
   --umber-color: #58504a
   --default-font-family: Poppins,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif
+  --secondary-font-family: Oleo Script,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif
+
+@mixin secondary-font
+  font-family: var(--secondary-font-family)
+  font-weight: 700
 
 body
   font-family: var(--default-font-family)
 
 button
+  @include secondary-font
   background-color: var(--thistle-color)
   padding: 1.25rem 1.75rem
-  font-size: 1.25rem
-  font-weight: bold
+  font-size: 1.5rem
   border: 0.175rem solid var(--umber-color)
   border-radius: 0.25rem
   
