feat: add jokes to modal

--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -4,7 +4,7 @@
     <img [src]="selectedDog?.message" [alt]="selectedDog?.breed">
     <div class="modal__text-wrapper">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error adipisci libero inventore illum cumque assumenda nostrum vel, placeat veniam dolore dolores aut asperiores odio porro officia id eaque totam, perferendis ducimus magni. Fugiat possimus dolores sapiente quasi. In hic, beatae, modi nesciunt dignissimos, earum quibusdam dicta eveniet velit porro aperiam.
+        {{ joke }}
       </p>
     </div>
     <div class="modal__button-wrapper">
