--- a/src/app/dog-card/dog-card.component.sass
+++ b/src/app/dog-card/dog-card.component.sass
@@ -1,19 +1,44 @@
+@import '../mixins'
+@import '../variables'
+
 main
-  background-color: var(--thistle-color)
-  padding: 1rem
-  h1
-  font-size: 1.125rem
+  background-color: $thistle-color
+  padding: 2rem
+  min-height: 100vh
+  display: flex
+  flex-direction: column
+  align-items: center
+  text-align: center
+
+  > *
+    margin: 1rem 0
+
   .dog-picture-container
     max-width: 100vw
-    padding: 1rem 0
+    width: 100%
     display: grid
     grid-template-columns: repeat(2, 1fr)
     gap: 1rem
+
+    @include for-tablet-portrait-up
+      gap: 2rem
+
+    @include for-tablet-landscape-up
+      max-width: 1000px
+
+    @include for-desktop-up
+       grid-template-columns: repeat(3, 1fr)
+    
+
     li
       list-style: none
       overflow: hidden
       height: 25vh
       border-radius: 0.250rem
+
+      @include for-tablet-landscape-up
+        height: 35vh
+
       .dog-picture 
         object-fit: cover
         width: 100%
