--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import "./app/mixins"
+@import "./app/variables"
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap')
 
@@ -8,27 +10,16 @@
   padding: 0
   box-sizing: border-box
 
-:root 
-  --thistle-color: #d3c4e3
-  --pink-color: #dbb1bc
-  --bluebell-color: #8f95d3
-  --babyblue-color: #89daff
-  --umber-color: #58504a
-  --default-font-family: Poppins,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif
-  --secondary-font-family: Oleo Script,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif
-
-@mixin secondary-font
-  font-family: var(--secondary-font-family)
-  font-weight: 700
-
 body
-  font-family: var(--default-font-family)
+  font-family: $default-font-family
 
 button
   @include secondary-font
-  background-color: var(--thistle-color)
   padding: 1.25rem 1.75rem
   font-size: 1.5rem
-  border: 0.175rem solid var(--umber-color)
   border-radius: 0.25rem
+  cursor: pointer
+
+  @include for-tablet-landscape-up
+    font-size: 1.75rem
   
