--- a/src/styles.sass
+++ b/src/styles.sass
@@ -23,3 +23,14 @@ button
   @include for-tablet-landscape-up
     font-size: 1.75rem
   
+footer
+  padding: 2rem 1.5rem
+  background-color: darken($thistle-color, 5%)
+  
+  ul
+    list-style-type: none
+    font-size: 0.75rem
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
+    gap: 0.75rem
