feat: make dogs spell out jokes

--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -4,7 +4,7 @@
     <img [src]="selectedDog?.message" [alt]="selectedDog?.breed">
     <div class="modal__text-wrapper">
       <p>
-        {{ joke }}
+        {{ spelledJoke }}
       </p>
     </div>
     <div class="modal__button-wrapper">
