--- a/src/app/modal/modal.component.sass
+++ b/src/app/modal/modal.component.sass
@@ -65,6 +65,7 @@
         overflow: auto
         font-size: 0.875rem
         max-width: 40ch
+        width: 40ch
         
         &::-webkit-scrollbar
           width: 0.25rem
